# FlashFusion

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  setup_env.sh
.github/workflows/: ci.yml
configs/: flashfusion_cascade_320.yaml  flashfusion_det_cls_320.yaml  flashfusion_det_seg_320.yaml  flashfusion_ensemble_320.yaml
docker/: Dockerfile  docker-compose.yml
docs/: FAQ.md  Fusion-Strategies.md  Home.md  Installation.md  Models.md  Pipelines.md  Quick-Start.md  Training.md
examples/: benchmark_fusion.py  cascade_pipeline.py  ensemble_models.py  export_fused_model.py  fuse_det_cls.py
flashfusion/: __init__.py  cli.py  registry.py
flashfusion/analytics/: __init__.py  benchmark.py  plots.py  profiler.py
flashfusion/calibration/: __init__.py  platt_scaling.py  temperature_scaling.py
flashfusion/cfg/: __init__.py  config.py
flashfusion/engine/: __init__.py  callbacks.py  exporter.py  predictor.py  trainer.py  validator.py
flashfusion/losses/: __init__.py  consistency_loss.py  fusion_loss.py
flashfusion/models/: __init__.py  fusion.py  lora.py
flashfusion/models/backbone/: __init__.py  adapter.py
flashfusion/models/head/: __init__.py  fusion_head.py
flashfusion/models/neck/: __init__.py  feature_fusion.py
flashfusion/nn/: __init__.py
flashfusion/pipelines/: __init__.py  det_cls_pipeline.py  det_seg_pipeline.py  multi_task_pipeline.py
flashfusion/solutions/: __init__.py  ensemble_detector.py  multi_model_analyzer.py
flashfusion/strategies/: __init__.py  auto_ensemble.py  cascade.py  model_merging.py  nms_fusion.py  stacking.py  tta.py  voting.py  weighted_box_fusion.py
flashfusion/uncertainty/: __init__.py  deep_ensembles.py  entropy.py  mc_dropout.py
flashfusion/utils/: __init__.py  checkpoint.py  logger.py  metrics.py  visualization.py
tests/: test_auto_ensemble.py  test_calibration.py  test_comprehensive.py  test_model_merging.py  test_models.py  test_registry.py  test_strategies.py  test_tta.py  test_uncertainty.py
